# HPC

./: .gitignore  CMakeLists.txt  Makefile  README.md  constructeurListPoint.c  convexHull.c  convexHulln.c  hedge.c  hedge.h  listIndice.c  listIndice.h  listIndiceList.c  listIndiceList.h  listPoint.c  listPoint.h  listPointList.c  listPointList.h  maillage.c  maillage.h  main.c  mainFinal.c  mainInterface  mainInterface.c  mainTemps.c  matriceTriangle.c  matriceTriangle.h  point.c  point.h  sourceCvxH.c  test  test1000  test100000  test2  test3  test500  testSDL.c  trace.py  tri.c
wmlab/: decoder  diff.pgm  embedder  estimation.pgm  lvar.pgm  mask.pgm  original.pgm  sobel.pgm
wmlab/images/: marked.pgm
wmlab/src/: modulation.c  ss.c
